--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -16,5 +16,8 @@
 // automatically applied to the <body> element in the app.
 
 -content.navMenu{
-	background-color: blue;
+	background-color: black;
+}
+ion-content {
+    background-image: url('assets/imgs/star');
 }
