--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,8 @@
 page-home {
 
 }
+ion-content{
+	background-image: url(../../assets/imgs/star.jpg);
+	background-repeat: no-repeat;
+background-size:cover;
+}
