--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,14 +34,26 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #07DFAB ,
-  secondary:  #FF623B  ,
+  primary:    #FF0000 ,
+  secondary:  #CD0C00,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  twitter: (
+    base: #55acee,
+    contrast: #ffffff
+  )
 );
 
 
+
+.getstart{
+  background-image: url('assets/imgs/star.jpg') !important;
+  background-repeat: no-repeat !important;
+background-size:cover !important;
+width:100% !important; height:100% !important;
+
+}
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
